--- a/motherhoodApp/app/views/users/index.html.erb
+++ b/motherhoodApp/app/views/users/index.html.erb
@@ -1,34 +1,22 @@
-<h1>Listing users</h1>
+<div id="logo">
+	<h1>Mamma Mia!</h1>
+	<p>[subtitle]</p>
+</div>
 
-	<% if notice %>
-		<p> id="notice><%= notice%></p>"
-	<% end %>
+<span id="menu">
+	<a>Home</a>
+	<a>Diet Log</a>
+	<a>Exercise Log</a>
+	<a>Baby Profile #1</a>
+	<a>Baby Profile #2</a>
+	<a>About Us</a>
+</span>
+<div id="content">
+	<span class="post">This is Content</span>
+</div>
+
+<div id="search"></div>
+
+<span id="sidebar">This is the sidebar</span>
 
 
-<table>
-  <tr>
-    <th>Name</th>
-<!-- 
-	<th>Hashed password</th>
-    <th>Salt</th>
--->
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.name %></td>
-    <td><%= user.hashed_password %></td>
-    <td><%= user.salt %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New User', new_user_path %>
